Subdivision Surface modifier uses viewport subdivision settings when rendering in edit mode #80768

Closed
opened 2020-09-14 12:17:31 +02:00 by Bertrand Coconnier · 11 comments

System Information
Operating system: Linux Fedora 32
Graphics card: Intel Corporation 4th Gen Core Processor Integrated Graphics Controller (rev 06)

Blender Version
Broken: v2.83.1

Short description of error
When rendering (F12 keyboard shortcut) while in edit mode, the subdivision modifier uses the viewport setting for the number of subdivisions. I was expecting it to use the render setting instead.

Exact steps for others to reproduce the error
1: Add subsurf modifier to default cube
2: Make subsurf viewport setting to 1
3: Make subsurf render setting to 5
4: Enter edit mode
5: Render the scene - F12 (either Eevee or Cycles)
6: Leave edit mode
7: Render the scene - F12

At step 5, the subdivision modifier will be rendered with the viewport setting (the rendered scene "responds to" modifications to the viewport setting but is not affected by the render setting).
At step 7, the subdivision modifier will be rendered correctly with the render setting for the number of subdivisions.

#58273 reported a similar issue about the subsurf modifier being ignored. For the current issue, the modifier is taken into account but with the wrong seeting.

**System Information** Operating system: Linux Fedora 32 Graphics card: Intel Corporation 4th Gen Core Processor Integrated Graphics Controller (rev 06) **Blender Version** Broken: v2.83.1 **Short description of error** When rendering (F12 keyboard shortcut) while in edit mode, the subdivision modifier uses the viewport setting for the number of subdivisions. I was expecting it to use the render setting instead. **Exact steps for others to reproduce the error** 1: Add subsurf modifier to default cube 2: Make subsurf viewport setting to 1 3: Make subsurf render setting to 5 4: Enter edit mode 5: Render the scene - F12 (either Eevee or Cycles) 6: Leave edit mode 7: Render the scene - F12 At step 5, the subdivision modifier will be rendered with the viewport setting (the rendered scene "responds to" modifications to the viewport setting but is not affected by the render setting). At step 7, the subdivision modifier will be rendered correctly with the render setting for the number of subdivisions. #58273 reported a similar issue about the subsurf modifier being ignored. For the current issue, the modifier is taken into account but with the wrong seeting.

Added subscriber: @bcoconni

Added subscriber: @bcoconni

Just installed v2.90.0 and the same issue occurs.

Just installed v2.90.0 and the same issue occurs.

Added subscriber: @ajaybiswas

Added subscriber: @ajaybiswas

Added subscriber: @mano-wii

Added subscriber: @mano-wii

Changed status from 'Needs Triage' to: 'Confirmed'

Changed status from 'Needs Triage' to: 'Confirmed'

It seems to be a problem related to the one described in #73344 (Modifiers disabled in viewport are not rendered if the object is in edit mode).
But perhaps the cause is entirely different.
So I am confirming this as another bug.

It seems to be a problem related to the one described in #73344 (Modifiers disabled in viewport are not rendered if the object is in edit mode). But perhaps the cause is entirely different. So I am confirming this as another bug.

Added subscriber: @ostry

Added subscriber: @ostry

This comment was removed by @ostry

*This comment was removed by @ostry*

Added subscriber: @patjan

Added subscriber: @patjan

This issue was referenced by 1cc3abca70

This issue was referenced by 1cc3abca701775e0ddb0756a262df99b8e7a0276

Changed status from 'Confirmed' to: 'Resolved'

Changed status from 'Confirmed' to: 'Resolved'
Bastien Montagne self-assigned this 2020-10-15 09:49:21 +02:00
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
7 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#80768
No description provided.