Fix T80768: Subdivision Surface modifier uses viewport subdivision settings when rendering in edit mode

Being in render 'context'was not taken into account in code evaluating
modifiers for meshes in Edit mode.

Reviewed By: #modeling, mont29

Differential Revision: https://developer.blender.org/D9217